# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
difficult_calculator/code/: __init__.py  compare.py
difficult_calculator/scripts/: __init__.py  gendiff.py  generate.py
gendiff/: gendiff_util.py
gendiff/code/: __init__.py  comparison.py  comparison_test.py  opening.py
gendiff/formatters/: stylish.py
gendiff/scripts/: __init__.py  gendif.py
tests/: test_diff_rec.py  test_different.py  test_different_yml.py  test_identical.py
tests/fixtures/: file_different1.json  file_different1.yaml  file_different2.json  file_different2.yaml
