[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["scatter27-lab <chyvashok98@gmail.com>"]
readme = "README.md"
repository = "https://github.com/scatter27-lab/python-project-50"
packages = [
    { include = "difficult_calculator" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
flake8 = "^7.1.1"

[tool.poetry.scripts]
gendiff = "difficult_calculator.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
